--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       microcontrolador para otras tareas.</h3>
     <img src="[https://circuitdigest.com/sites/default/files/inlineimages/u5/TM1637-Display-Module-Parts.jpg]" alt="[Foto]" height="100" width="50">
     <h2>Aplicaciones:</h2>
-    <h3>Aquí están sus aplicaciones y usos:
-       * Reloj de tiempo real.
-       * Temporizador
-       * Contador decimal
-       * Termómetro</h3>
+    <h3>Aquí están sus aplicaciones y usos:</h3>
+      <h3>* Reloj de tiempo real.</h3>
+      <h3> * Temporizador</h3>
+      <h3>  * Contador decimal</h3>
+      <h3>* Termómetro</h3>
     <img src="[https://circuitdigest.com/sites/default/files/inlineimages/u5/Interfacing-TM1637-Display-Module-with-Arduino-Circuit.jpg]" alt="[Foto]" height="100" width="50">
 
 </body>
